# tex

./: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  electron-main.js  package-lock.json  package.json  pyproject.toml
src/backend/: .gitignore
src/backend/app/: __init__.py  config.py  main.py
src/frontend/: capacitor.config.ts  package-lock.json  package.json
src/frontend/android/app/: build.gradle
src/frontend/android/app/src/main/java/com/craigvan/tex/: MainActivity.java
src/frontend/android/app/src/main/res/values/: strings.xml
src/frontend/ios/App/App/: Info.plist
src/frontend/ios/App/App.xcodeproj/: project.pbxproj
